--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
 </head>
 <body>
     <div class="header">
@@ -16,17 +16,8 @@
         <p id="start-btn">Start!</p>
     </div>
     <div id="questions">
-        <div class="question" id="ques1"><h3>Question 1:</h3>
-        <ol type="a"><p>Which of these did I do last night?</p>
-        <li class="correct">Your mom</li>
-        <li class="incorrect">Your dad</li>
-        <li class="incorrect">All of the above</li>
-        <li class="incorrect">None of the above</li>
-        </ol></div>
-        <div class="question" id="ques2"></div>
-        <div class="question" id="ques3"></div>
-        <div class="question" id="ques4"></div>
-        <div class="question" id="ques5"></div>
+        <div class="question" id="question"></div>
+        <div id="score"></div>
     </div>
     <div class="footer"></div>
     <script src="assets/script/script.js"></script>
