fixed bug causing the last question to skip, created logscore/showscore/scoreboard functions using local storage, added a timesup function that's called if time runs out, added reload method to scoreboard and timesup 'try again' buttons, re-linked style sheet and added style for most of the elements

--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="header">
         <div class="headertxt">QUIZ: TEST YOUR CODING KNOWLEDGE!</div>
         <div id="timer"></div>
     </div>
-    <div id="start">
-        <p id="start-btn">Start!</p>
+    <div class="startSec" id="start">
     </div>
-    <div id="questions">
+    <div class="contentSec" id="questions">
         <div class="question" id="question"></div>
-        <div id="score"></div>
+        <div class="scoreSec" id="score"></div>
     </div>
     <div class="footer"></div>
     <script src="assets/script/script.js"></script>
