misc css styling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="header">
         <div class="headertxt">QUIZ: TEST YOUR CODING KNOWLEDGE!</div>
+        <div id="lastScore"></div>
         <div id="timer"></div>
     </div>
     <div class="startSec" id="start">
