--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test Your Coding Knowledge!</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="header">
-        <div class="headertxt">QUIZ: TEST YOUR CODING KNOWLEDGE!</div>
-        <div id="lastScore"></div>
+        <div class="headertxt" id="headertxt">QUIZ: TEST YOUR CODING KNOWLEDGE!</div>
         <div id="timer"></div>
     </div>
     <div class="startSec" id="start">
